--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
   firebase_core: ^2.15.0
   cloud_firestore: ^4.8.5
   firebase_messaging: ^14.6.6
+  firebase_auth: ^4.8.0
+  google_fonts:
+
 
 
 
